// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeMirrorCore renders controlled 1`] = `
<div>
  <span
    style={
      Object {
        "color": "#c4c4c4",
      }
    }
  >
    Field Label
     
  </span>
  <Toolbar
    noGutter={true}
  >
    <ToolbarGroup
      firstChild={false}
      lastChild={false}
    >
      <FlatButton
        disabled={false}
        fullWidth={false}
        label="Format"
        labelPosition="after"
        labelStyle={Object {}}
        onClick={[Function]}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </ToolbarGroup>
  </Toolbar>
  <Controlled
    label="Field Label"
    onBeforeChange={[Function]}
    options={
      Object {
        "lineNumbers": true,
        "lineWrapping": true,
        "mode": "application/json",
      }
    }
    value="original value"
  />
</div>
`;

exports[`CodeMirrorCore renders with defaults 1`] = `
<div>
  <span
    style={
      Object {
        "color": "#c4c4c4",
      }
    }
  >
    Field Label
     
  </span>
  <Toolbar
    noGutter={true}
  >
    <ToolbarGroup
      firstChild={false}
      lastChild={false}
    >
      <FlatButton
        disabled={false}
        fullWidth={false}
        label="Format"
        labelPosition="after"
        labelStyle={Object {}}
        onClick={[Function]}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </ToolbarGroup>
  </Toolbar>
  <Controlled
    label="Field Label"
    onBeforeChange={[Function]}
    options={
      Object {
        "lineNumbers": true,
        "lineWrapping": true,
        "mode": "application/json",
      }
    }
    value=""
  />
</div>
`;
